--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
+  "name": "blumpilot_bot",
+  "version": "1.0.0",
+  "description": "A Telegram bot for managing Blum accounts",
+  "main": "bot.js",
+  "type": "module",
+  "scripts": {
+    "start": "node bot.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0"
   },
-  "name": "blumpilot_bot",
-  "version": "1.0.0",
-  "main": "bot.js",
-  "type": "module", 
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "author": "Ogboh Chinonso",
+  "license": "ISC"
 }
